--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ Houston, TX 77036</p>
 <li><a href="services.html">Services</a></li>
 <li><a href="blog.html">Blog</a></li>
 <li><a href="contact.html">Contact</a></li>
-<li style="font-size:7pt; letter-spacing:2px; font-weight:600; margin-top:10px;"><a href="login.html" style="font-size:11pt; color:#FFA500 !important;">Login</a></li>
-<li style="font-size:7pt; letter-spacing:2px; font-weight:600; "><a href="sign-up.html" style="font-size:11pt; color:#FFA500 !important;">Sign Up</a></li>
+<li style="font-size:7pt; letter-spacing:2px; font-weight:600; margin-top:10px;"><a href="sms-club.html" style="font-size:11pt; color:#FFA500 !important;">Login</a></li>
+<li style="font-size:7pt; letter-spacing:2px; font-weight:600; "><a href="sms-club.html" style="font-size:11pt; color:#FFA500 !important;">Sign Up</a></li>
 </ul>
 </div>
 
@@ -75,8 +75,8 @@ Houston, TX 77036</p>
 <li><a href="blog.html">Blog</a></li>
 <li><a href="contact.html">Contact</a></li>
 <li style="color:#FFA500;">|</li>
-<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="login.html">LOGIN</a></li>
-<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="sign-up.html">SIGN UP</a></li>
+<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="sms-club.html">LOGIN</a></li>
+<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="sms-club.html">SIGN UP</a></li>
 </ul>
 </div>
 
@@ -98,14 +98,14 @@ Houston, TX 77036</p>
 <div class="inner">
 <h2><b>Welcome to</b> Home Advice</h2>
 <p>The most trusted online network of howeowners</p>
-<a href="login.html">BECOME A MEMBER <i class="lni lni-arrow-right"></i></a> </div>
+<a href="sms-club.html">BECOME A MEMBER <i class="lni lni-arrow-right"></i></a> </div>
 
 </div>
 <div class="swiper-slide swiper-slide-active" data-swiper-slide-index="0" style="width: 495px; margin-right: 10px;">
 <div class="inner">
 <h2><b>Welcome to</b> Home Advice</h2>
 <p>The most trusted online network of howeowners</p>
-<a href="login.html">BECOME A MEMBER <i class="lni lni-arrow-right"></i></a> </div>
+<a href="sms-club.html">BECOME A MEMBER <i class="lni lni-arrow-right"></i></a> </div>
 
 </div>
 
@@ -113,7 +113,7 @@ Houston, TX 77036</p>
 <div class="inner">
 <h2><b>Welcome to</b> Home Advice</h2>
 <p>The most trusted online network of howeowners</p>
-<a href="login.html">BECOME A MEMBER <i class="lni lni-arrow-right"></i></a> </div>
+<a href="sms-club.html">BECOME A MEMBER <i class="lni lni-arrow-right"></i></a> </div>
 
 </div>
 
@@ -121,7 +121,7 @@ Houston, TX 77036</p>
 <div class="inner">
 <h2><b>Welcome to</b> Home Advice</h2>
 <p>The most trusted online network of howeowners</p>
-<a href="login.html">BECOME A MEMBER <i class="lni lni-arrow-right"></i></a> </div>
+<a href="sms-club.html">BECOME A MEMBER <i class="lni lni-arrow-right"></i></a> </div>
 
 </div>
 
@@ -129,7 +129,7 @@ Houston, TX 77036</p>
 <div class="inner">
 <h2><b>Welcome to</b> Home Advice</h2>
 <p>The most trusted online network of howeowners</p>
-<a href="login.html">BECOME A MEMBER <i class="lni lni-arrow-right"></i></a> </div>
+<a href="sms-club.html">BECOME A MEMBER <i class="lni lni-arrow-right"></i></a> </div>
 
 </div></div>
 
@@ -181,7 +181,7 @@ Houston, TX 77036</p>
 <div class="icon-content">
 <figure><img src="assets/icon01.png" alt="Image"></figure>
 <h3>Find Repair Help</h3>
-<small>Work with great professionals around your area.&nbsp;</small> <a href="log-in.html">&gt;</a> </div>
+<small>Work with great professionals around your area.&nbsp;</small> <a href="sms-club.html">&gt;</a> </div>
 
 </div>
 
@@ -189,7 +189,7 @@ Houston, TX 77036</p>
 <div class="icon-content">
 <figure><img src="assets/icon03.png" alt="Image"></figure>
 <h3>Find Decor Help</h3>
-<small>Decorating might not be as easy as it sounds. Find real pros now.&nbsp;</small> <a href="log-in.html">&gt;</a> </div>
+<small>Decorating might not be as easy as it sounds. Find real pros now.&nbsp;</small> <a href="sms-club.html">&gt;</a> </div>
 
  </div>
 
@@ -197,7 +197,7 @@ Houston, TX 77036</p>
 <div class="icon-content">
 <figure><img src="assets/icon02.png" alt="Image"></figure>
 <h3>Find Sales Help </h3>
-<small>Is it time to move to a bigger and better home? Talk to a pro now.&nbsp; &nbsp;&nbsp;</small> <a href="log-in.html">&gt;</a> </div>
+<small>Is it time to move to a bigger and better home? Talk to a pro now.&nbsp; &nbsp;&nbsp;</small> <a href="sms-club.html">&gt;</a> </div>
 
 </div>
 
@@ -470,7 +470,7 @@ Houston, TX 77036</p>
 <div class="recent-news">
 <figure> <img src="assets/blog-02-thumb.jpg" alt="Image"> </figure>
 <div class="content"> <small>29 August, 2020</small>
-<h3><a href="log-in.html">When it comes to decor style, what's yours?</a></h3>
+<h3><a href="sms-club.html">When it comes to decor style, what's yours?</a></h3>
 <div class="author"> <img src="assets/author-003.png" alt="Image"> <span>by <b>Home Advice Editor</b></span> </div>
 
 </div>
@@ -483,7 +483,7 @@ Houston, TX 77036</p>
 <div class="recent-news">
 <figure> <img src="assets/blog-03-thumb.jpg" alt="Image"> </figure>
 <div class="content"> <small>13 July, 2020</small>
-<h3><a href="log-in.html">The future of home sales</a></h3>
+<h3><a href="sms-club.html">The future of home sales</a></h3>
 <div class="author"> <img src="assets/author-002.png" alt="Image"> <span>by <b>Home Advice Editor</b></span> </div>
 
 </div>
