--- a/index.html
+++ b/index.html
@@ -522,61 +522,32 @@ We're always available at <b>833-587-0075</b> </div>
 </section>
 
 <footer class="footer">
-<div class="container">
+ <div class="container">
 <div class="row">
 <div class="col-lg-4 col-md-6">
 <h6 class="widget-title">OUR OFFICE</h6>
 <address>
-<p>6200 Savoy Dr <br>
-Houston, TX 77036</p>
-<p>833-587-0075</p>
+<p>2505 Anthem Village Dr, #E-520, <br>
+Henderson, NV 89052</p>
 <a href="contact.html" data-width="640" data-height="360">CONTACT US</a>
 </address>
 </div>
 
-
 <div class="col-lg-6">
-<h6 class="widget-title">NEWSLETTER</h6><p>Subscribe to our newsletter now to be an insider.</p>
-<form action="https://homehelpersunited.com/contact_process.php">
-<input type="email" placeholder="Type your e-mail" name="email" required=""><input type="submit" value="SUBSCRIBE">
+<h6 class="widget-title">NEWSLETTER</h6>
+<p>For more information, please join us.</p>
+<form action="/sms-club.html">
+<input type="email" id="email" name="email" placeholder="example@email.com" required=""><input type="submit" value="JOIN NOW">
 </form>
 </div>
-
 <div class="col-12" style="text-align:center;">
-<div class="footer-bottom"> <span>© 2020 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-terms-conditions.html" style="color:white;">Mobile Terms &amp; Conditions</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-privacy-policy.html" style="color:white;">Mobile Privacy Policy</a></span>
+<div class="footer-bottom"> <span>© 2020 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>
 </div>
-
 </div>
-
 </div>
-
 </div>
-
 <a href="#" class="scroll-top"><i class="lni lni-arrow-up"></i> <small>Scroll Up</small> </a>
-
 </footer>
-
-<div id="sales-specialist-form">
-<form>
-<div class="form-group"> <span>Full Name</span>
-<input type="text">
-</div>
-
-<div class="form-group"> <span>Phone Number</span>
-<input type="text">
-</div>
-
-<div class="form-group"> <span>Current E-mail</span>
-<input type="email">
-</div>
-
-<div class="form-group">
-<input type="submit" value="REQUEST A CALL">
-</div>
-
-</form>
-</div>
-
 
 <script src="assets/jquery.min.js"></script>
 <script src="assets/bootstrap.min.js"></script>
