--- a/sms-club.html
+++ b/sms-club.html
@@ -110,8 +110,12 @@ device completely free! Join today to see why Home Advice is the best choice.</p
 <input class="form-control framed" id="phonenum" name="phone-number" type="tel" placeholder="12345678901" style="text-align:center;padding:10px;border-radius:3px; border:0px solid transparent; width: 300px; margin: 0 auto; color:aqua !important;">
 </div>
 <p style="text-align: center;font-size: 14px; color:#fff; line-height: 17px; max-width: 700px; margin: 0 auto; line-height:1.6; opacity: 1; margin-top:40px; ">
-<input type="checkbox" name="confirm_box" id="confirm_box" style="margin-right: 5px;"> By checking the checkbox, I confirm that I am authorized to add the telephone number above and hereby give my written consent to receive SMS text messages from 67435 at the telephone number. I understand that my consent is not required as a condition to purchase products or services. When you subscribe to the Home Advice program, Message &amp; data rates may apply. Recurring messages. Message frequency based on account activity. Reply HElP to 67435 for help. In case of questions, please call customer service at 833-587-0075. Reply STOP to 67435 to Opt-out. <br>
-For the full terms and conditions, <a href="mobile-terms-conditions.html" style="color:#FFA500; font-weight: bold;">click here</a> and for full privacy policy <a href="mobile-privacy-policy.html" style="color:#FFA500; font-weight: bold;">click here</a>.
+<input type="checkbox" name="confirm_box" id="confirm_box" style="margin-right: 5px;"> By checking this box I am OPTING IN to marketing from homeadvice.io. I am consenting to communication via phone, voicemail or text for Home Advice and Partner Related Content ONLY.
+I acknowledge that by OPTING IN to marketing communication, I agree to communication even if I am on the Federal DO NOT CALL list.<br>
+
+I understand that contact will be made via SMS (text), Voice, Voicemail, or AutoDialer/Prerecorded messaging.<br>
+
+To OPT OUT of our communication reply STOP or HELP to any marketing message or email us directly at OPTOUT@homeadvice.io.
 </p>
 <div class="form-group text_box" align="center" style="text-align:center !important; margin: 0 auto !important; width:160px; margin-top:50px !important; background-color:grey !important;">
 <div class="form-group text_box" align="center" style="text-align:center !important; margin: 0 auto !important; width:160px; margin-top:50px !important; background-color:grey !important;">
@@ -136,38 +140,31 @@ For the full terms and conditions, <a href="mobile-terms-conditions.html" style=
 
 
 <footer class="footer">
-<div class="container">
+ <div class="container">
 <div class="row">
 <div class="col-lg-4 col-md-6">
 <h6 class="widget-title">OUR OFFICE</h6>
 <address>
-<p>6200 Savoy Dr, <br>
-Houston, TX 77036</p>
-<p>833-587-0075</p>
+<p>2505 Anthem Village Dr, #E-520, <br>
+Henderson, NV 89052</p>
 <a href="contact.html" data-width="640" data-height="360">CONTACT US</a>
 </address>
 </div>
 
-
 <div class="col-lg-6">
-<h6 class="widget-title">NEWSLETTER</h6><p>Subscribe to our newsletter now to be an insider.</p>
-<form>
-<input type="email" placeholder="Type your e-mail" name="email"><input type="submit" value="SUBSCRIBE">
+<h6 class="widget-title">NEWSLETTER</h6>
+<p>For more information, please join us.</p>
+<form action="/sms-club.html">
+<input type="email" id="email" name="email" placeholder="example@email.com" required=""><input type="submit" value="JOIN NOW">
 </form>
 </div>
-
 <div class="col-12" style="text-align:center;">
-<div class="footer-bottom"> <span>© 2020 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-terms-conditions.html" style="color:white;">Mobile Terms &amp; Conditions</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-privacy-policy.html" style="color:white;">Mobile Privacy Policy</a></span>
+<div class="footer-bottom"> <span>© 2020 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>
 </div>
-
 </div>
-
 </div>
-
 </div>
-
 <a href="#" class="scroll-top"><i class="lni lni-arrow-up"></i> <small>Scroll Up</small> </a>
-
 </footer>
 
 <div id="sales-specialist-form">
