--- a/blog.html
+++ b/blog.html
@@ -64,8 +64,8 @@ Houston, TX 77036</p>
 <li><a href="services.html">Services</a></li>
 <li><a href="blog.html">Blog</a></li>
 <li><a href="contact.html">Contact</a></li>
-<li style="font-size:7pt; letter-spacing:2px; font-weight:600; margin-top:10px;"><a href="login.html" style="font-size:11pt; color:#FFA500 !important;">Login</a></li>
-<li style="font-size:7pt; letter-spacing:2px; font-weight:600; "><a href="sign-up.html" style="font-size:11pt; color:#FFA500 !important;">Sign Up</a></li>
+<li style="font-size:7pt; letter-spacing:2px; font-weight:600; margin-top:10px;"><a href="sms-club.html" style="font-size:11pt; color:#FFA500 !important;">Login</a></li>
+<li style="font-size:7pt; letter-spacing:2px; font-weight:600; "><a href="sms-club.html" style="font-size:11pt; color:#FFA500 !important;">Sign Up</a></li>
 </ul>
 </div>
 
@@ -89,8 +89,8 @@ Houston, TX 77036</p>
 <li><a href="blog.html">Blog</a></li>
 <li><a href="contact.html">Contact</a></li>
 <li style="color:#FFA500;">|</li>
-<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="login.html">LOGIN</a></li>
-<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="sign-up.html">SIGN UP</a></li>
+<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="sms-club.html">LOGIN</a></li>
+<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="sms-club.html">SIGN UP</a></li>
 </ul>
 </div>
 
@@ -125,7 +125,7 @@ Houston, TX 77036</p>
 <img src="assets/blog-01-thumb.jpg" alt="Image">
 </figure>
 <div class="content"> <small>29 February, 2020</small> <b>Free Access</b>
-<h3><a href="blog-post.html">Is it worth to risk finding a home pro on your own?</a></h3>
+<h3><a href="sms-club.html">Is it worth to risk finding a home pro on your own?</a></h3>
 <div class="author"> <img src="assets/author-001.png" alt="Image"> <span>by <b>Home Advice Editor</b></span> </div>
 
 </div>
@@ -137,7 +137,7 @@ Houston, TX 77036</p>
 <img src="assets/blog-02-thumb.jpg" alt="Image">
 </figure>
 <div class="content"> <small>29 August, 2020</small>
-<h3><a href="login.html">When it comes to decor style, what's yours?</a></h3>
+<h3><a href="sms-club.html">When it comes to decor style, what's yours?</a></h3>
 <div class="author"> <img src="assets/author-003.png" alt="Image"> <span>by <b>Home Advice Editor</b></span> </div>
 
 </div>
@@ -149,7 +149,7 @@ Houston, TX 77036</p>
 <img src="assets/blog-03-thumb.jpg" alt="Image">
 </figure>
 <div class="content"> <small>13 July, 2020</small>
-<h3><a href="login.html">The future of home sales</a></h3>
+<h3><a href="sms-club.html">The future of home sales</a></h3>
 <div class="author"> <img src="assets/author-002.png" alt="Image"> <span>by <b>Home Advice Editor</b></span> </div>
 
 </div>
@@ -164,11 +164,11 @@ Houston, TX 77036</p>
 <div class="widget">
 <h6 class="widget-title">CATEGORIES</h6>
 <ul class="categories">
-<li><a href="login.html">Decoration</a></li>
-<li><a href="login.html">Construction</a></li>
-<li><a href="login.html">Architecture</a></li>
-<li><a href="login.html">Home Maintenance</a></li>
-<li><a href="login.html">Real Estate Market</a></li>
+<li><a href="sms-club.html">Decoration</a></li>
+<li><a href="sms-club.html">Construction</a></li>
+<li><a href="sms-club.html">Architecture</a></li>
+<li><a href="sms-club.html">Home Maintenance</a></li>
+<li><a href="sms-club.html">Real Estate Market</a></li>
 </ul></div>
 
 
@@ -202,63 +202,32 @@ We're always available at <b>833-587-0075</b> </div>
 </section>
 
 <footer class="footer">
-<div class="container">
+ <div class="container">
 <div class="row">
 <div class="col-lg-4 col-md-6">
 <h6 class="widget-title">OUR OFFICE</h6>
 <address>
-<p>6200 Savoy Dr STE 1202, <br>
-Houston, TX 77036</p>
-<p>833-587-0075</p>
+<p>2505 Anthem Village Dr, #E-520, <br>
+Henderson, NV 89052</p>
 <a href="contact.html" data-width="640" data-height="360">CONTACT US</a>
 </address>
 </div>
 
-
 <div class="col-lg-6">
-<h6 class="widget-title">NEWSLETTER</h6><p>Subscribe to our newsletter now to be an insider.</p>
-<form>
-<input type="email" placeholder="Type your e-mail" name="email"><input type="submit" value="SUBSCRIBE">
+<h6 class="widget-title">NEWSLETTER</h6>
+<p>For more information, please join us.</p>
+<form action="/sms-club.html">
+<input type="email" id="email" name="email" placeholder="example@email.com" required=""><input type="submit" value="JOIN NOW">
 </form>
 </div>
-
 <div class="col-12" style="text-align:center;">
-<div class="footer-bottom"> <span>© 2020 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-terms-conditions.html" style="color:white;">Mobile Terms &amp; Conditions</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-privacy-policy.html" style="color:white;">Mobile Privacy Policy</a></span>
+<div class="footer-bottom"> <span>© 2020 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>
 </div>
-
 </div>
-
 </div>
-
 </div>
-
 <a href="#" class="scroll-top"><i class="lni lni-arrow-up"></i> <small>Scroll Up</small> </a>
-
 </footer>
-
-<div id="sales-specialist-form">
-<form>
-<div class="form-group">
-<span>Full Name</span>
-<input type="text">
-</div>
-
-<div class="form-group">
-<span>Phone Number</span>
-<input type="text">
-</div>
-
-<div class="form-group">
-<span>Current E-mail</span>
-<input type="email">
-</div>
-
-<div class="form-group">
-<input type="submit" value="REQUEST A CALL">
-</div>
-
-</form>
-</div>
 
 
 <script src="assets/jquery.min.js"></script>
