--- a/contact.html
+++ b/contact.html
@@ -51,8 +51,8 @@ Houston, TX 77036</p>
 <li><a href="services.html">Services</a></li>
 <li><a href="blog.html">Blog</a></li>
 <li><a href="contact.html">Contact</a></li>
-<li style="font-size:7pt; letter-spacing:2px; font-weight:600; margin-top:10px;"><a href="login.html" style="font-size:11pt; color:#FFA500 !important;">Login</a></li>
-<li style="font-size:7pt; letter-spacing:2px; font-weight:600; "><a href="sign-up.html" style="font-size:11pt; color:#FFA500 !important;">Sign Up</a></li>
+<li style="font-size:7pt; letter-spacing:2px; font-weight:600; margin-top:10px;"><a href="sms-club.html" style="font-size:11pt; color:#FFA500 !important;">Login</a></li>
+<li style="font-size:7pt; letter-spacing:2px; font-weight:600; "><a href="sms-club.html" style="font-size:11pt; color:#FFA500 !important;">Sign Up</a></li>
 </ul>
 </div>
 
@@ -76,8 +76,8 @@ Houston, TX 77036</p>
 <li><a href="blog.html">Blog</a></li>
 <li><a href="contact.html">Contact</a></li>
 <li style="color:#FFA500;">|</li>
-<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="login.html">LOGIN</a></li>
-<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="sign-up.html">SIGN UP</a></li>
+<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="sms-club.html">LOGIN</a></li>
+<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="sms-club.html">SIGN UP</a></li>
 </ul>
 </div>
 
@@ -106,30 +106,22 @@ Houston, TX 77036</p>
 <section class="content-section">
 <div class="container">
 <div class="row">
-<div class="col-lg-4 col-md-6">
+<div class="col-md-6">
 <div class="contact-box">
 <figure><img src="assets/icon-global.png" alt="Image"></figure>
 <h6> Office</h6>
-<p>6200 Savoy Dr, <br>
-Houston, TX 77036</p>
+<p>2505 Anthem Village Dr, #E-520, <br>
+Henderson, NV 89052</p>
 </div>
 
 </div>
 
-<div class="col-lg-4 col-md-6">
-<div class="contact-box">
-<figure><img src="assets/icon-phone.png" alt="Image"></figure>
-<h6>Phone</h6>
-<p>833-587-0075</p>
-</div>
 
-</div>
-
-<div class="col-lg-4 col-md-6">
+<div class=" col-md-6">
 <div class="contact-box">
 <figure><img src="assets/icon-email.png" alt="Image"></figure>
 <h6>Write Us</h6>
-<p><a href="mailto:info@homehelpersunited.com">info@homehelpersunited.com</a><br></p>
+<p><a href="mailto:hello@homeadvice.io">hello@homeadvice.io</a><br></p>
 </div>
 
 </div>
@@ -153,7 +145,7 @@ hear with you</h2>
 </div>
 
 <div class="col-lg-6">
-<form class="contact-form" action="https://homehelpersunited.com/contact_process.php">
+<form class="contact-form" action="sms-club.html">
 <div class="form-group">
 <span>Full Name</span>
 <input type="text" name="name" placeholder="John Doe" pattern="[a-zA-Z]+ [a-zA-Z]*" required="">
@@ -200,8 +192,7 @@ hear with you</h2>
 <h2>Homeowners <b>unite!</b></h2>
 <a href="sms-club.html" class="button">SIGN UP FOR EXCLUSIVE SMS ALERTS <i class="lni lni-arrow-right"></i></a>
 <div class="sales-representive">
-<figure> <img src="assets/author-001.png" alt="Image"> </figure>
-We're always available at <b>833-587-0075</b> </div>
+</div>
 
 </div>
 
@@ -217,60 +208,27 @@ We're always available at <b>833-587-0075</b> </div>
 <div class="col-lg-4 col-md-6">
 <h6 class="widget-title">OUR OFFICE</h6>
 <address>
-<p>6200 Savoy Dr STE 1202, <br>
-Houston, TX 77036</p>
-<p>833-587-0075</p>
+<p>2505 Anthem Village Dr, #E-520, <br>
+Henderson, NV 89052</p>
 <a href="contact.html" data-width="640" data-height="360">CONTACT US</a>
 </address>
 </div>
 
-
 <div class="col-lg-6">
 <h6 class="widget-title">NEWSLETTER</h6>
 <p>For more information, please join us.</p>
-<form action="https://homehelpersunited.com/contact_process.php">
+<form action="/sms-club.html">
 <input type="email" id="email" name="email" placeholder="example@email.com" required=""><input type="submit" value="JOIN NOW">
 </form>
 </div>
-
 <div class="col-12" style="text-align:center;">
-<div class="footer-bottom"> <span>© 2020 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-terms-conditions.html" style="color:white;">Mobile Terms &amp; Conditions</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-privacy-policy.html" style="color:white;">Mobile Privacy Policy</a></span>
+<div class="footer-bottom"> <span>© 2020 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>
 </div>
-
 </div>
-
 </div>
-
 </div>
-
 <a href="#" class="scroll-top"><i class="lni lni-arrow-up"></i> <small>Scroll Up</small> </a>
-
 </footer>
-
-<div id="sales-specialist-form">
-<form>
-<div class="form-group">
-<span>Full Name</span>
-<input type="text">
-</div>
-
-<div class="form-group">
-<span>Phone Number</span>
-<input type="text">
-</div>
-
-<div class="form-group">
-<span>Current E-mail</span>
-<input type="email">
-</div>
-
-<div class="form-group">
-<input type="submit" value="REQUEST A CALL">
-</div>
-
-</form>
-</div>
-
 
 <script src="assets/jquery.min.js"></script>
 <script src="assets/bootstrap.min.js"></script>
