--- a/about-us.html
+++ b/about-us.html
@@ -230,8 +230,7 @@ Houston, TX 77036</p>
 <h2>Homeowners <b>unite!</b></h2>
 <a href="sms-club.html" class="button">SIGN UP FOR EXCLUSIVE SMS ALERTS <i class="lni lni-arrow-right"></i></a>
 <div class="sales-representive">
-<figure> <img src="assets/author-001.png" alt="Image"> </figure>
-We're always available at <b>833-587-0075</b> </div>
+ </div>
 
 </div>
 
