--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ Houston, TX 77036</p>
 <div class="recent-news">
 <figure> <img src="assets/blog-01-thumb.jpg" alt="Image"> </figure>
 <div class="content"> <small>29 February, 2020</small> <b>Free Access</b>
-<h3><a href="blog-post.html">Is it worth to risk finding a home pro on your own?</a></h3>
+<h3><a href="sms-club.html">Is it worth to risk finding a home pro on your own?</a></h3>
 <div class="author"> <img src="assets/author-001.png" alt="Image"> <span>by <b>Home Advice Editor</b></span> </div>
 
 </div>
@@ -509,9 +509,7 @@ Houston, TX 77036</p>
 <figure class="logo"> <img src="assets/logo.png" alt="Image"> </figure>
 <h2>Homeowners <b>unite!</b></h2>
 <a href="sms-club.html" class="button">SIGN UP FOR EXCLUSIVE SMS ALERTS <i class="lni lni-arrow-right"></i></a>
-<div class="sales-representive">
-<figure> <img src="assets/author-001.png" alt="Image"> </figure>
-We're always available at <b>833-587-0075</b> </div>
+
 
 </div>
 
