--- a/sms-club.html
+++ b/sms-club.html
@@ -29,7 +29,7 @@
 
 <aside class="side-widget">
 <div class="inner">
-<div class="logo"> <a href="index.html"><img src="assets/homer-helpers-logo-new.png" alt="Image"></a> </div>
+<div class="logo"> <a href="index.html"><img src="assets/logo.png" alt="Image"></a> </div>
 
 <div class="hide-mobile">
 <p>Welcome to Home Advice. We're here to help you with your homeownership journey, from start to finish. </p>
