--- a/sms-club.html
+++ b/sms-club.html
@@ -63,7 +63,7 @@ Houston, TX 77036</p>
 
 <nav class="navbar nav-down">
 <div class="container">
-<div class="logo"> <a href="index.html"><img src="assets/homer-helpers-logo-new.png" alt="Image"></a> </div>
+<div class="logo"> <a href="index.html"><img src="assets/logo.png" alt="Image"></a> </div>
 
 
 <div class="site-menu">
