--- a/blog.html
+++ b/blog.html
@@ -49,9 +49,8 @@
 <figure class="gallery"><img src="assets/sidebar-thumb-01.jpg" alt="Image"><img src="assets/sidebar-thumb-02.jpg" alt="Image"></figure>
 <h6 class="widget-title">ADDRESS</h6>
 <address class="address">
-<p>6200 Savoy Dr STE 1202,<br>
-Houston, TX 77036</p>
-<p>833-587-0075</p>
+<p>2505 Anthem Village Dr, #E-520,<br>
+Henderson, NV 89052</p>
 </address>
 </div>
 
