--- a/sms-club.html
+++ b/sms-club.html
@@ -109,12 +109,10 @@ device completely free! Join today to see why Home Advice is the best choice.</p
 <input class="form-control framed" id="phonenum" name="phone-number" type="tel" placeholder="12345678901" style="text-align:center;padding:10px;border-radius:3px; border:0px solid transparent; width: 300px; margin: 0 auto; color:aqua !important;">
 </div>
 <p style="text-align: center;font-size: 14px; color:#fff; line-height: 17px; max-width: 700px; margin: 0 auto; line-height:1.6; opacity: 1; margin-top:40px; ">
-<input type="checkbox" name="confirm_box" id="confirm_box" style="margin-right: 5px;"> By checking this box I am OPTING IN to marketing from homeadvice.io. I am consenting to communication via phone, voicemail or text for Home Advice and Partner Related Content ONLY.
-I acknowledge that by OPTING IN to marketing communication, I agree to communication even if I am on the Federal DO NOT CALL list.<br>
-
-I understand that contact will be made via SMS (text), Voice, Voicemail, or AutoDialer/Prerecorded messaging.<br>
-
-To OPT OUT of our communication reply STOP or HELP to any marketing message or email us directly at OPTOUT@homeadvice.io.
+<input type="checkbox" name="confirm_box" id="confirm_box" style="margin-right: 5px;"> By checking this box, I confirm that I am authorized to add the telephone number(s) above and hereby give my written consent to receive SMS text messages from you at the telephone number(s). I understand that my consent is not required as a condition to purchase products or services. When you subscribe to the Celebrity Health Secrets SMS program, Message and data rates may apply. 5 msgs/week. You may opt out of text alerts via the online portal or by texting STOP to opt out. For help text HELP. In case of questions, please contact customer service at info@celebhealthsecrets.net.
+</p>
+<p style="text-align: center;font-size: 14px; color:#fff; line-height: 17px; max-width: 700px; margin: 0 auto; line-height:1.6; opacity: 1; margin-top:40px; ">
+<input type="checkbox" name="confirm_box2" id="confirm_box2" style="margin-right: 5px;"> By checking this box, I agree to the  <a href="https://homeadvice.io/terms-conditions.html" style="color:#FFA500; font-weight: bold;">Terms and Conditions</a> and  <a href="https://homeadvice.io/privacy-policy.html" style="color:#FFA500; font-weight: bold;">Privacy Policy</a>.
 </p>
 <div class="form-group text_box" align="center" style="text-align:center !important; margin: 0 auto !important; width:160px; margin-top:50px !important; background-color:grey !important;">
 <div class="form-group text_box" align="center" style="text-align:center !important; margin: 0 auto !important; width:160px; margin-top:50px !important; background-color:grey !important;">
