--- a/about-us.html
+++ b/about-us.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-N78STH2');</script>
+<!-- End Google Tag Manager -->
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="theme-color" content="#FFA500">
 <title>Home Advice</title>
@@ -21,7 +27,10 @@
 <link rel="stylesheet" href="assets/bootstrap.min.css">
 <link rel="stylesheet" href="assets/style.css">
 </head>
-<body>
+<body><!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N78STH2"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div class="first-transition"></div>
 
 <div class="page-transition"></div>
@@ -49,8 +58,8 @@ Henderson, NV 89052</p>
 <li><a href="services.html">Services</a></li>
 <li><a href="blog.html">Blog</a></li>
 <li><a href="contact.html">Contact</a></li>
-<li style="font-size:7pt; letter-spacing:2px; font-weight:600; margin-top:10px;"><a href="sms-club.html" style="font-size:11pt; color:#FFA500 !important;">Login</a></li>
-<li style="font-size:7pt; letter-spacing:2px; font-weight:600; "><a href="sms-club.html" style="font-size:11pt; color:#FFA500 !important;">Sign Up</a></li>
+<li style="font-size:7pt; letter-spacing:2px; font-weight:600; margin-top:10px;"><a href="optin.html" style="font-size:11pt; color:#FFA500 !important;">Login</a></li>
+<li style="font-size:7pt; letter-spacing:2px; font-weight:600; "><a href="optin.html" style="font-size:11pt; color:#FFA500 !important;">Sign Up</a></li>
 </ul>
 </div>
 
@@ -74,8 +83,8 @@ Henderson, NV 89052</p>
 <li><a href="blog.html">Blog</a></li>
 <li><a href="contact.html">Contact</a></li>
 <li style="color:#FFA500;">|</li>
-<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="sms-club.html">LOGIN</a></li>
-<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="sms-club.html">SIGN UP</a></li>
+<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="optin.html">LOGIN</a></li>
+<li style="font-size:8pt; letter-spacing:2px; font-weight:600;"><a href="optin.html">SIGN UP</a></li>
 </ul>
 </div>
 
@@ -86,7 +95,7 @@ Henderson, NV 89052</p>
 </div>
 
 
-<a href="sms-club.html" class="navbar-button"><i class="lni lni-mobile"></i> <span>Mobile Alerts</span></a> </div>
+<a href="optin.html" class="navbar-button"><i class="lni lni-mobile"></i> <span>HomeAdvice Alerts </span></a> </div>
 
 </nav>
 
@@ -227,7 +236,7 @@ Henderson, NV 89052</p>
 <div class="col-12">
 <figure class="logo"> <img src="assets/logo.png" alt="Image"> </figure>
 <h2>Homeowners <b>unite!</b></h2>
-<a href="sms-club.html" class="button">SIGN UP FOR EXCLUSIVE SMS ALERTS <i class="lni lni-arrow-right"></i></a>
+<a href="optin.html" class="button">SIGN UP FOR EXCLUSIVE SMS ALERTS <i class="lni lni-arrow-right"></i></a>
 <div class="sales-representive">
  </div>
 
@@ -252,14 +261,10 @@ Henderson, NV 89052</p>
 </div>
 
 <div class="col-lg-6">
-<h6 class="widget-title">NEWSLETTER</h6>
-<p>For more information, please join us.</p>
-<form action="/sms-club.html">
-<input type="email" id="email" name="email" placeholder="example@email.com" required=""><input type="submit" value="JOIN NOW">
-</form>
+
 </div>
 <div class="col-12" style="text-align:center;">
-<div class="footer-bottom"> <span>© 2020 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>
+<div class="footer-bottom"> <span>© 2020 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>| &nbsp;&nbsp;<span><a href="optin.html" style="color:white;">Optin</a></span>
 </div>
 </div>
 </div>
