--- a/blog-post.html
+++ b/blog-post.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-N78STH2');</script>
+<!-- End Google Tag Manager -->
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="theme-color" content="#FFA500">
 <title>Home Advice</title>
@@ -21,7 +27,10 @@
 <link rel="stylesheet" href="assets/bootstrap.min.css">
 <link rel="stylesheet" href="assets/style.css">
 </head>
-<body>
+<body><!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N78STH2"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div class="first-transition"></div>
 
 <div class="page-transition"></div>
@@ -87,7 +96,7 @@ Houston, TX 77036</p>
 </div>
 
 
-<a href="sms-club.html" class="navbar-button"><i class="lni lni-mobile"></i> <span>Mobile Alerts</span></a> </div>
+<a href="optin.html" class="navbar-button"><i class="lni lni-mobile"></i> <span>HomeAdvice Alerts </span></a> </div>
 
 </nav>
 
@@ -171,7 +180,7 @@ Houston, TX 77036</p>
 <div class="col-12">
 <figure class="logo"> <img src="assets/logo.png" alt="Image"> </figure>
 <h2>Homeowners <b>unite!</b></h2>
-<a href="sms-club.html" class="button">SIGN UP FOR EXCLUSIVE SMS ALERTS <i class="lni lni-arrow-right"></i></a>
+<a href="optin.html" class="button">SIGN UP FOR EXCLUSIVE SMS ALERTS <i class="lni lni-arrow-right"></i></a>
 <div class="sales-representive">
 <figure> <img src="assets/author-001.png" alt="Image"> </figure>
 We're always available at <b>833-587-0075</b> </div>
@@ -206,7 +215,7 @@ Houston, TX 77036</p>
 </div>
 
 <div class="col-12" style="text-align:center;">
-<div class="footer-bottom"> <span>© 2020 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-terms-conditions.html" style="color:white;">Mobile Terms &amp; Conditions</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-privacy-policy.html" style="color:white;">Mobile Privacy Policy</a></span>
+<div class="footer-bottom"> <span>© 2020 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-terms-conditions.html" style="color:white;">Mobile Terms &amp; Conditions</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>| &nbsp;&nbsp;<span><a href="optin.html" style="color:white;">Optin</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-privacy-policy.html" style="color:white;">Mobile Privacy Policy</a></span>
 </div>
 
 </div>
