--- a/contact.html
+++ b/contact.html
@@ -225,7 +225,7 @@ Henderson, NV 89052</p>
 
 </div>
 <div class="col-12" style="text-align:center;">
-<div class="footer-bottom"> <span>© 2021 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>| &nbsp;&nbsp;<span><a href="optin.html" style="color:white;">Optin</a></span>
+<div class="footer-bottom"> <span>© 2021 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="optin.html" style="color:white;">Optin</a></span>
 </div>
 </div>
 </div>
