--- a/optin.html
+++ b/optin.html
@@ -127,7 +127,7 @@ device completely free! Join today to see why Home Advice is the best choice.</p
 </p>
 <div class="form-group text_box" align="center" style="text-align:center !important; margin: 0 auto !important; width:160px; margin-top:50px !important; background-color:grey !important;">
 <div class="form-group text_box" align="center" style="text-align:center !important; margin: 0 auto !important; width:160px; margin-top:50px !important; background-color:grey !important;">
-<input class="btn pull-right btn-primary" type="submit" name="submit" id="submit_form" value="Submit" style="margin: 0 auto !important; color: black; background-color:white !important;">
+<input class="btn pull-right btn-primary" type="submit" name="submit" id="submit" value="Submit" style="margin: 0 auto !important; color: black; background-color:white !important;">
 </div>
 
 </div></form>
