--- a/optin.html
+++ b/optin.html
@@ -147,7 +147,7 @@ device completely free! Join today to see why Home Advice is the best choice.</p
                 return;
             }
             var xhr = new XMLHttpRequest();
-            xhr.open('POST', 'http://137.184.226.44/leads', true);
+            xhr.open('POST', 'https://gmfcq.com/leads', true);
             xhr.setRequestHeader('Content-Type', 'application/json');
             
             xhr.onreadystatechange = function () {
