--- a/blog-post.html
+++ b/blog-post.html
@@ -215,7 +215,7 @@ Houston, TX 77036</p>
 </div>
 
 <div class="col-12" style="text-align:center;">
-<div class="footer-bottom"> <span>© 2021 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-terms-conditions.html" style="color:white;">Mobile Terms &amp; Conditions</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="optin.html" style="color:white;">Optin</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-privacy-policy.html" style="color:white;">Mobile Privacy Policy</a></span>
+<div class="footer-bottom"> <span>© 2021 Home Advice </span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="terms-conditions.html" style="color:white;"><span>Terms &amp; Conditions</span></a>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-terms-conditions.html" style="color:white;">Mobile Terms &amp; Conditions</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="privacy-policy.html" style="color:white;">Privacy Policy</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="optin.html" style="color:white;">OPT IN</a></span>&nbsp;&nbsp;| &nbsp;&nbsp;<span><a href="mobile-privacy-policy.html" style="color:white;">Mobile Privacy Policy</a></span>
 </div>
 
 </div>
